--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "byte-materials-creator",
   "displayName": "byte-materials-creator",
   "description": "extension for quickly creating materials",
+  "extension": "byte-materials-creator",
   "version": "1.0.2",
   "publisher": "nuyoah-ll",
   "engines": {
