--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "byte-materials-creator",
   "displayName": "byte-materials-creator",
   "description": "extension for quickly creating materials",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "publisher": "nuyoah-ll",
   "engines": {
     "vscode": "^1.85.0"
@@ -46,14 +46,14 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
+    "vscode:prepublish": "pnpm run compile && cp -r ./src/templates ./out/templates",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
     "clear": "rm -rf ./out",
-    "publish": "npm run clear && npm run compile && vsce publish"
+    "publish": "npm run clear && vsce publish"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
